...
            Image("chase")
                .resizable()
                .scaledToFit()
                .frame(maxWidth: .infinity, maxHeight: 200)
            
            VStack {
                Text("Weather App")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                
                Text("iOS Assessment\nby\nYoseph Feseha")
                    .font(.title)
                    .foregroundColor(.black)
...
                
            }
            
            
            Spacer()
            
            Button( "Start", action: {
                isPresentingWeatherView = true
                
                
            })
            .padding()
            .frame(maxWidth: .infinity)
...
