...

class WeatherViewController: UIViewController {
    
    //UI Elements programatically
    private lazy var searchBar: UISearchBar = {
        let searchBar = UISearchBar()
        searchBar.placeholder = "Enter a city name"
        searchBar.delegate = self
        return searchBar
    }()
    
    private let lastCityNameLabel: UILabel = {
        let label = UILabel()
...
        label.textColor = .black
        return label
    }()
    
    private let fetchWeatherButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Fetch Weather", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.titleLabel?.font = UIFont(name: "Helvetica Neue", size: 20)
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 10
        button.addTarget(self, action: #selector(fetchWeatherData), for: .touchUpInside)
        
...
